# largescaler

./: .gitignore  .gitmodules  DESCRIPTION  Dockerfile  NAMESPACE  README  TODO  entrypoint  flake.nix  largescaler
demo/: lasso.R
largescaler/: pyproject.toml
largescaler/largescaler/: __init__.py  __main__.py  cluster.py  interactive_runner.py  largescaler.py
largescaler/test/: test_largescaler.py
largescaler/typings/ckdl/: __init__.pyi
largescaler/typings/fire/: __init__.pyi  __main__.pyi  completion.pyi  completion_test.pyi  core.pyi  core_test.pyi  custom_descriptions.pyi  custom_descriptions_test.pyi  decorators.pyi  decorators_test.pyi  docstrings.pyi  docstrings_fuzz_test.pyi  docstrings_test.pyi  fire_import_test.pyi  fire_test.pyi  formatting.pyi  formatting_test.pyi  formatting_windows.pyi  helptext.pyi  helptext_test.pyi  inspectutils.pyi  inspectutils_test.pyi  interact.pyi  interact_test.pyi  main_test.pyi  parser.pyi  parser_fuzz_test.pyi  parser_test.pyi  test_components.pyi  test_components_bin.pyi  test_components_py3.pyi  test_components_test.pyi  testutils.pyi  testutils_test.pyi  trace.pyi  trace_test.pyi  value_types.pyi
largescaler/typings/fire/console/: console_attr.pyi  console_attr_os.pyi  console_io.pyi  console_pager.pyi  encoding.pyi  files.pyi  platforms.pyi  text.pyi
