[project]
name = "largescaler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beartype>=0.20.2",
    "ckdl>=1.0",
    "fire>=0.7.0",
    "pexpect>=4.9.0",
]

[project.scripts]
largescaler = "largescaler.largescaler:main"
run-interactive = "largescaler.interactive_runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "basedpyright>=1.29.1",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
]
